--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,5 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-anyio==4.3.0
-attrs==23.2.0
-azure-core==1.30.1
-azure-functions==1.19.0
-azure-identity==1.16.0
-azure-storage-blob==12.19.1
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-cryptography==42.0.5
-Deprecated==1.2.14
-frozenlist==1.4.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.5
-httpx==0.27.0
-hyperframe==6.0.1
-idna==3.7
-importlib-metadata==7.0.0
-isodate==0.6.1
-microsoft-kiota-abstractions==1.3.2
-microsoft-kiota-authentication-azure==1.0.0
-microsoft-kiota-http==1.3.1
-microsoft-kiota-serialization-form==0.1.0
-microsoft-kiota-serialization-json==1.2.0
-microsoft-kiota-serialization-multipart==0.1.0
-microsoft-kiota-serialization-text==1.0.0
-msal==1.28.0
-msal-extensions==1.1.0
-msgraph-core==1.0.0
-msgraph-sdk==1.3.0
-multidict==6.0.5
-opentelemetry-api==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-semantic-conventions==0.45b0
-packaging==24.0
-pendulum==3.0.0
-portalocker==2.8.2
-pycparser==2.22
-PyJWT==2.8.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-pywin32==306
-requests==2.31.0
-six==1.16.0
-sniffio==1.3.1
-std-uritemplate==0.0.56
-time-machine==2.14.1
-typing_extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
-wrapt==1.16.0
-yarl==1.9.4
-zipp==3.18.1
+azure-identity
+azure-storage-blob
+azure-functions
+msgraph-sdk
+pytz
